# openenclave

./: CMakeLists.txt
.jenkins/: Dockerfile.full.WindowsServer  build_docker_images.Jenkinsfile
cmake/: compiler_settings.cmake
common/: datetime.c  oe_host_string.h  tee.edl
enclave/core/: CMakeLists.txt  atexit.c  atexit.h
enclave/core/optee/: gp.c
enclave/core/sgx/: calls.c  exception.c  exit.c
enclave/core/sgx/linux/: threadlocal.c
host/: CMakeLists.txt  traceh.c
host/crypto/bcrypt/: cert.c  pem.c
host/linux/: CMakeLists.txt
host/optee/: CMakeLists.txt
host/optee/linux/: CMakeLists.txt  enclave.c
host/sgx/: CMakeLists.txt  calls.c  cpuid.h  create.c  elf.c  exception.c  loadpe.c  registers.c  report.c
host/sgx/linux/: CMakeLists.txt
host/sgx/windows/: CMakeLists.txt  switchless.c
host/windows/: CMakeLists.txt  hostthread.c  syscall.c
include/openenclave/bits/: defs.h
include/openenclave/internal/: atomic.h  calls.h  context.inc  defs.h  sgxtypes.h
libc/: CMakeLists.txt
scripts/: install-windows-prereqs.ps1
syscall/: syscall.c
tests/abortStatus/: abortStatus.edl
tests/abortStatus/enc/: CMakeLists.txt
tests/abortStatus/host/: CMakeLists.txt
tests/cpuid/enc/: enc.c
tests/ecall_ocall/: ecall_ocall.edl
tests/ecall_ocall/enc/: CMakeLists.txt
tests/ecall_ocall/host/: CMakeLists.txt
tests/report/host/: host.cpp
tests/safecrt/: safecrt.edl
tests/safecrt/enc/: CMakeLists.txt
tests/safecrt/host/: CMakeLists.txt
tests/tools/oecertdump/: oecertdump.edl
tests/tools/oecertdump/enc/: CMakeLists.txt
tools/oesgx/: oesgx.c
(+1 files in other folders)
